--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,8 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        box-sizing: border-box;
+    body,
+    html {
+        overflow-x: hidden;
     }
 }
