--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,4 +8,10 @@
     html {
         overflow-x: hidden;
     }
+
+    @media (min-width: 475px) {
+        .xs {
+            @apply max-w-[475px];
+        }
+    }
 }
