--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
 @layer base {
     body,
     html {
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
         font-family: "Nunito", sans-serif;
         width: 100%;
     }
